--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<kotlin.version>1.9.22</kotlin.version>
+		<coroutine.version>1.8.0</coroutine.version>
+		<start-class>com.example.demo.DemoApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -41,6 +43,12 @@
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-core</artifactId>
+			<version>${coroutine.version}</version>
 		</dependency>
 
 		<dependency>
